# amclient

./: .gitignore  Cargo.toml  Info.plist  README.md  icon.rc
.github/workflows/: build_macos.yml  test_macos.yml
src/: main.rs  the_patrol_ambush_data.csv
src/kafka_am/: consumer.rs
