[package]
name = "amclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
csv = "1.1.6"
bevy_quinnet = "0.5"
serde = "1.0.152"
image = "0.24.6"
winit = "0.28.6"
bevy_egui = "0.21.0"
bevy-inspector-egui = "0.19.0"
bevy_console = "0.8.0"

[build-dependencies]
embed-resource = "1.6.3"